# valo

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  debug_dump.py  debug_index.rs  debug_ns.py  debug_ns_2.py  debug_scope.py  good.valo  program_dump.txt  remove_for_message.py  reproduce_discord.valo  temp_program.rs  test_com_compilation.sh  test_debug_ns.py  test_list_classes.py  test_namespace_dump_2.py  test_nested_ns.valo  test_resolve  test_resolve.rs
core/: Cargo.toml
core/src/: lib.rs  modules.rs  preprocessor.rs  variant_test.rs
core/src/ast/: declarations.rs  expressions.rs  mod.rs  statements.rs
core/src/backend/: mod.rs
core/src/backend/interpreter/: arrays.rs  calls.rs  eval_expr.rs  (+12 more)
core/src/frontend/: mod.rs  modules.rs  package.rs  preprocessor.rs
core/src/interpreter/: arrays.rs  calls.rs  control_flow.rs  eval_expr.rs  exec_stmt.rs  frame.rs  interpreter.rs  mod.rs  objects.rs  properties.rs  records.rs  tests.rs  values.rs
core/src/lexer/: mod.rs  scanner.rs  token.rs
core/src/parser/: declarations.rs  expressions.rs  mod.rs  program.rs  statements.rs  tests.rs
core/src/runtime/: builtins.rs  callable.rs  coerce.rs  com.rs  compare.rs  diagnostic.rs  ffi_platform.rs  mod.rs  numeric.rs  ops.rs  type_name.rs  value.rs  vba.rs
core/src/semantics/: context.rs  mod.rs  symbols.rs  types.rs  validate.rs  validate_classes.rs  validate_declarations.rs  validate_expressions.rs  validate_statements.rs
core/tests/: examples.rs  lset_rset_tests.rs  vba_parity.rs
crates/valo_cli/: Cargo.toml
crates/valo_cli/src/: main.rs
(+286 files in other folders)
