[package]
name = "valo_core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
libffi = "5.1.0"
rand = "0.8"
rand_pcg = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_Foundation"
] }
